Fix crash: Add UnlockExperimentalVMOptions + Full 3D GUI overhaul
CRITICAL FIX:
- Add -XX:+UnlockExperimentalVMOptions before experimental G1GC flags
- Remove unsupported flags (UseNUMA, AggressiveOpts, UseCompressedClassPointers)
- All MC versions 1.8-1.21.x now launch without VM errors

FPS Boost v2:
- Version-specific profiles: Legacy(1.8-1.12), Modern(1.13-1.16),
  Heavy(1.17-1.19), Ultra(1.20-1.21+)
- FPSBoostConfig.kt auto-detects version and applies optimal flags

3D GUI Overhaul:
- 3D play button with gradient, glass shine, and drop shadow
- 3D menu items with raised shadow + top highlight + ripple
- 3D settings cards with depth layers and glass effect
- 3D dialog backgrounds with popup shadow
- 3D buttons with pressed/unpressed state depth change
- 3D edit boxes with recessed inset shadow
- Gradient 3D top bar with light sweep
- Ambient glow effects behind key elements
- Version selector with gradient 3D card
- All existing drawables upgraded to 3D layered versions

🦝 Co-created with [Raccoon AI](https://raccoonai.tech)

Co-Authored-By: ACE <ace@raccoonai.tech>